--- a/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
@@ -80,10 +80,10 @@
 
             <!--  Allow Tmux Control  -->
             <local:SettingContainer x:Uid="Profile_AllowTmuxControl"
-                                    Visibility="{x:Bind Profile.TmuxControlEnabled}"
                                     ClearSettingValue="{x:Bind Profile.ClearAllowTmuxControl}"
                                     HasSettingValue="{x:Bind Profile.HasAllowTmuxControl, Mode=OneWay}"
-                                    SettingOverrideSource="{x:Bind Profile.AllowTmuxControlOverrideSource, Mode=OneWay}">
+                                    SettingOverrideSource="{x:Bind Profile.AllowTmuxControlOverrideSource, Mode=OneWay}"
+                                    Visibility="{x:Bind Profile.TmuxControlEnabled}">
                 <ToggleSwitch IsOn="{x:Bind Profile.AllowTmuxControl, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
