Partially address feedback

--- a/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
@@ -83,7 +83,7 @@
                                     ClearSettingValue="{x:Bind Profile.ClearAllowTmuxControl}"
                                     HasSettingValue="{x:Bind Profile.HasAllowTmuxControl, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Profile.AllowTmuxControlOverrideSource, Mode=OneWay}"
-                                    Visibility="{x:Bind Profile.TmuxControlEnabled}">
+                                    Visibility="{x:Bind Profile.TmuxControlEnabled, Mode=OneTime}">
                 <ToggleSwitch IsOn="{x:Bind Profile.AllowTmuxControl, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchInExpanderStyle}" />
             </local:SettingContainer>
