Add tooltips to color scheme combo box items

--- a/src/cascadia/TerminalSettingsEditor/Appearances.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Appearances.xaml
@@ -197,7 +197,8 @@
                                                FontFamily="Cascadia Code"
                                                Foreground="{x:Bind mtu:Converters.ColorToBrush(ForegroundColor.Color), Mode=OneWay}"
                                                Text="{x:Bind Name, Mode=OneWay}"
-                                               TextTrimming="WordEllipsis" />
+                                               TextTrimming="WordEllipsis"
+                                               ToolTipService.ToolTip="{x:Bind Name, Mode=OneWay}" />
                                 </Grid>
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
