--- a/src/cascadia/TerminalSettingsEditor/EditAction.xaml
+++ b/src/cascadia/TerminalSettingsEditor/EditAction.xaml
@@ -157,24 +157,30 @@
                 <Setter Property="Height" Value="{StaticResource EditButtonSize}" />
                 <Setter Property="Width" Value="{StaticResource EditButtonSize}" />
             </Style>
+            <Style x:Key="TextBlockGroupingStyle"
+                   BasedOn="{StaticResource BodyStrongTextBlockStyle}"
+                   TargetType="TextBlock">
+                        <Setter Property="MaxWidth" Value="{StaticResource StandardControlMaxWidth}" />
+                        <Setter Property="Margin" Value="0,0,0,4" />
+                        <Setter Property="FontSize" Value="16" />
+            </Style>
 
             <!--  Templates  -->
             <DataTemplate x:Key="KeyChordTemplate"
                           x:DataType="local:KeyChordViewModel">
                 <ListViewItem IsTabStop="False"
                               Style="{StaticResource KeyBindingContainerStyle}">
-                    <Grid Padding="2,0,2,0"
+                    <Grid Padding="-4,0,0,0"
                           VerticalAlignment="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0"
                                 Click="{x:Bind ToggleEditMode}"
-                                Style="{ThemeResource KeyChordBorderStyle}"
+                                Background="{ThemeResource AppBarItemBackgroundThemeBrush}"
                                 Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(IsInEditMode), Mode=OneWay}">
                             <TextBlock FontSize="14"
-                                       Style="{ThemeResource KeyChordTextBlockStyle}"
                                        Text="{x:Bind KeyChordText, Mode=OneWay}"
                                        TextWrapping="WrapWholeWords" />
                         </Button>
@@ -215,6 +221,7 @@
                         <Button Grid.Column="1"
                                 Margin="8,0,0,0"
                                 AutomationProperties.Name="{x:Bind DeleteButtonName}"
+                                HorizontalAlignment="Right"
                                 Style="{StaticResource DeleteSmallButtonStyle}">
                             <Button.Content>
                                 <FontIcon FontSize="{StaticResource EditButtonIconSize}"
@@ -243,7 +250,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -252,6 +259,7 @@
                     <muxc:NumberBox Grid.Column="1"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
+                                    HorizontalAlignment="Stretch"
                                     Maximum="100"
                                     Minimum="0"
                                     SmallChange="10"
@@ -267,7 +275,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -275,6 +283,7 @@
                                TextWrapping="WrapWholeWords" />
                     <muxc:NumberBox Grid.Column="1"
                                     AutomationProperties.Name="{x:Bind Name}"
+                                    HorizontalAlignment="Stretch"
                                     LargeChange="1"
                                     Maximum="999"
                                     Minimum="0"
@@ -291,7 +300,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -300,6 +309,7 @@
                     <muxc:NumberBox Grid.Column="1"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
+                                    HorizontalAlignment="Stretch"
                                     Maximum="999"
                                     Minimum="0"
                                     SmallChange="1"
@@ -315,7 +325,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -324,6 +334,7 @@
                     <muxc:NumberBox Grid.Column="1"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
+                                    HorizontalAlignment="Stretch"
                                     Maximum="999"
                                     Minimum="0"
                                     SmallChange="1"
@@ -339,7 +350,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -348,6 +359,7 @@
                     <muxc:NumberBox Grid.Column="1"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
+                                    HorizontalAlignment="Stretch"
                                     Maximum="999"
                                     Minimum="-999"
                                     SmallChange="1"
@@ -363,7 +375,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -373,6 +385,7 @@
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="0.2"
                                     Maximum="1"
+                                    HorizontalAlignment="Stretch"
                                     Minimum="0"
                                     SmallChange="0.1"
                                     Style="{StaticResource NumberBoxSettingStyle}"
@@ -387,7 +400,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto"
+                        <ColumnDefinition Width="*"
                                           MinWidth="196" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
@@ -408,7 +421,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -416,6 +429,7 @@
                                TextWrapping="WrapWholeWords" />
                     <ComboBox Grid.Column="1"
                               AutomationProperties.Name="{x:Bind Name}"
+                              HorizontalAlignment="Stretch"
                               ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                               ItemsSource="{x:Bind EnumList, Mode=OneWay}"
                               SelectedItem="{x:Bind EnumValue, Mode=TwoWay}"
@@ -482,13 +496,14 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <ToggleSwitch Grid.Column="1"
+                                  HorizontalAlignment="Right"
                                   AutomationProperties.Name="{x:Bind Name}"
                                   IsOn="{x:Bind UnboxBool(Value), Mode=TwoWay, BindBack=BoolOptionalBindBack}" />
                 </Grid>
@@ -501,13 +516,15 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <CheckBox Grid.Column="1"
+                              HorizontalAlignment="Right"
+                              Margin="0,0,-96,0"
                               AutomationProperties.Name="{x:Bind Name}"
                               IsChecked="{x:Bind UnboxBoolOptional(Value), Mode=TwoWay, BindBack=BoolOptionalBindBack}"
                               IsThreeState="True" />
@@ -526,13 +543,14 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <ComboBox Grid.Column="1"
+                              HorizontalAlignment="Stretch"
                               AutomationProperties.Name="{x:Bind Name}"
                               ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                               ItemsSource="{x:Bind EnumList, Mode=OneWay}"
@@ -572,7 +590,7 @@
                                TextWrapping="WrapWholeWords" />
                     <ItemsControl Grid.Column="1"
                                   Margin="0"
-                                  HorizontalAlignment="Left"
+                                  HorizontalAlignment="Right"
                                   AutomationProperties.Name="{x:Bind Name}"
                                   ItemTemplate="{StaticResource FlagItemTemplate}"
                                   ItemsSource="{x:Bind FlagList, Mode=OneWay}" />
@@ -586,7 +604,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -608,7 +626,7 @@
                       ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{StaticResource ArgumentNameWidth}" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
@@ -646,12 +664,14 @@
 
     <Border MaxWidth="{StaticResource StandardControlMaxWidth}"
             Margin="{StaticResource SettingStackMargin}">
-        <Grid MaxWidth="600"
-              Margin="{StaticResource SettingStackMargin}"
-              HorizontalAlignment="Left"
+        <Grid Margin="{StaticResource SettingStackMargin}"
+              HorizontalAlignment="Stretch"
               ColumnSpacing="16"
-              RowSpacing="8">
+              RowSpacing="16">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
@@ -662,57 +682,67 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <TextBlock x:Uid="Actions_Name"
+            <TextBlock x:Uid="Actions_CommandDetails"
+                       Style="{StaticResource TextBlockGroupingStyle}"
                        Grid.Row="0"
                        Grid.Column="0"
                        VerticalAlignment="Center" />
+            <TextBlock x:Uid="Actions_Name"
+                       Grid.Row="1"
+                       Grid.Column="0"
+                       VerticalAlignment="Center" />
             <TextBox x:Name="CommandNameTextBox"
-                     Grid.Row="0"
+                     Grid.Row="1"
                      Grid.Column="1"
-                     Width="300"
-                     HorizontalAlignment="Left"
+                     HorizontalAlignment="Stretch"
                      AutomationProperties.Name="{x:Bind ViewModel.ActionNameTextBoxAutomationPropName}"
                      PlaceholderText="{x:Bind ViewModel.DisplayName, Mode=OneWay}"
                      Text="{x:Bind ViewModel.Name, Mode=TwoWay}" />
             <TextBlock x:Uid="Actions_ShortcutAction"
-                       Grid.Row="1"
+                       Grid.Row="2"
                        Grid.Column="0"
                        VerticalAlignment="Center" />
-            <ComboBox Grid.Row="1"
+            <ComboBox Grid.Row="2"
                       Grid.Column="1"
                       VerticalAlignment="Center"
                       AutomationProperties.Name="{x:Bind ViewModel.ShortcutActionComboBoxAutomationPropName}"
                       ItemsSource="{x:Bind ViewModel.AvailableShortcutActions, Mode=OneWay}"
                       SelectedItem="{x:Bind ViewModel.ProposedShortcutActionName, Mode=TwoWay}" />
-            <TextBlock x:Uid="Actions_Arguments"
-                       Grid.Row="2"
-                       Grid.Column="0"
-                       VerticalAlignment="Center"
-                       Visibility="{x:Bind ViewModel.ActionArgsVM.HasArgs, Mode=OneWay}" />
-            <ItemsControl Grid.Row="2"
-                          Grid.Column="1"
-                          AutomationProperties.Name="{x:Bind ViewModel.AdditionalArgumentsControlAutomationPropName}"
-                          IsTabStop="False"
-                          ItemTemplateSelector="{StaticResource ArgsTemplateSelector}"
-                          ItemsSource="{x:Bind ViewModel.ActionArgsVM.ArgValues, Mode=OneWay}" />
             <TextBlock x:Uid="Actions_Keybindings"
+                       Style="{StaticResource TextBlockGroupingStyle}"
                        Grid.Row="3"
                        Grid.Column="0"
                        VerticalAlignment="Center" />
             <ListView x:Name="KeyChordListView"
                       x:Uid="Actions_KeyBindingsListView"
-                      Grid.Row="3"
-                      Grid.Column="1"
+                      Grid.Row="4"
+                      Grid.Column="0"
+                      Grid.ColumnSpan="2"
                       ItemTemplate="{StaticResource KeyChordTemplate}"
                       ItemsSource="{x:Bind ViewModel.KeyChordList, Mode=OneWay}"
                       SelectionMode="None">
                 <ListView.Header>
-                    <Button Click="{x:Bind ViewModel.AddKeybinding_Click}">
+                    <Button Click="{x:Bind ViewModel.AddKeybinding_Click}"
+                            Margin="0,0,0,4">
                         <TextBlock x:Uid="Actions_AddKeyChord" />
                     </Button>
                 </ListView.Header>
             </ListView>
-            <Button Grid.Row="4"
+            <TextBlock x:Uid="Actions_Arguments"
+                       Style="{StaticResource TextBlockGroupingStyle}"
+                       Grid.Row="5"
+                       Grid.Column="0"
+                       VerticalAlignment="Center"
+                       Visibility="{x:Bind ViewModel.ActionArgsVM.HasArgs, Mode=OneWay}" />
+            <ItemsControl Grid.Row="6"
+                          Grid.Column="0"
+                          Grid.ColumnSpan="2"
+                          AutomationProperties.Name="{x:Bind ViewModel.AdditionalArgumentsControlAutomationPropName}"
+                          IsTabStop="False"
+                          HorizontalAlignment="Stretch"
+                          ItemTemplateSelector="{StaticResource ArgsTemplateSelector}"
+                          ItemsSource="{x:Bind ViewModel.ActionArgsVM.ArgValues, Mode=OneWay}" />
+            <Button Grid.Row="7"
                     Grid.Column="0"
                     IsEnabled="{x:Bind ViewModel.IsUserAction, Mode=OneWay}"
                     Style="{StaticResource DeleteButtonStyle}">
