--- a/src/cascadia/TerminalSettingsEditor/EditAction.xaml
+++ b/src/cascadia/TerminalSettingsEditor/EditAction.xaml
@@ -160,9 +160,9 @@
             <Style x:Key="TextBlockGroupingStyle"
                    BasedOn="{StaticResource BodyStrongTextBlockStyle}"
                    TargetType="TextBlock">
-                        <Setter Property="MaxWidth" Value="{StaticResource StandardControlMaxWidth}" />
-                        <Setter Property="Margin" Value="0,0,0,4" />
-                        <Setter Property="FontSize" Value="16" />
+                <Setter Property="MaxWidth" Value="{StaticResource StandardControlMaxWidth}" />
+                <Setter Property="Margin" Value="0,0,0,4" />
+                <Setter Property="FontSize" Value="16" />
             </Style>
 
             <!--  Templates  -->
@@ -177,8 +177,8 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0"
-                                Click="{x:Bind ToggleEditMode}"
                                 Background="{ThemeResource AppBarItemBackgroundThemeBrush}"
+                                Click="{x:Bind ToggleEditMode}"
                                 Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(IsInEditMode), Mode=OneWay}">
                             <TextBlock FontSize="14"
                                        Text="{x:Bind KeyChordText, Mode=OneWay}"
@@ -220,8 +220,8 @@
                         </Grid>
                         <Button Grid.Column="1"
                                 Margin="8,0,0,0"
-                                AutomationProperties.Name="{x:Bind DeleteButtonName}"
                                 HorizontalAlignment="Right"
+                                AutomationProperties.Name="{x:Bind DeleteButtonName}"
                                 Style="{StaticResource DeleteSmallButtonStyle}">
                             <Button.Content>
                                 <FontIcon FontSize="{StaticResource EditButtonIconSize}"
@@ -257,9 +257,9 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <muxc:NumberBox Grid.Column="1"
+                                    HorizontalAlignment="Stretch"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
-                                    HorizontalAlignment="Stretch"
                                     Maximum="100"
                                     Minimum="0"
                                     SmallChange="10"
@@ -282,8 +282,8 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <muxc:NumberBox Grid.Column="1"
-                                    AutomationProperties.Name="{x:Bind Name}"
                                     HorizontalAlignment="Stretch"
+                                    AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
                                     Maximum="999"
                                     Minimum="0"
@@ -307,9 +307,9 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <muxc:NumberBox Grid.Column="1"
+                                    HorizontalAlignment="Stretch"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
-                                    HorizontalAlignment="Stretch"
                                     Maximum="999"
                                     Minimum="0"
                                     SmallChange="1"
@@ -332,9 +332,9 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <muxc:NumberBox Grid.Column="1"
+                                    HorizontalAlignment="Stretch"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
-                                    HorizontalAlignment="Stretch"
                                     Maximum="999"
                                     Minimum="0"
                                     SmallChange="1"
@@ -357,9 +357,9 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <muxc:NumberBox Grid.Column="1"
+                                    HorizontalAlignment="Stretch"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="1"
-                                    HorizontalAlignment="Stretch"
                                     Maximum="999"
                                     Minimum="-999"
                                     SmallChange="1"
@@ -382,10 +382,10 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <muxc:NumberBox Grid.Column="1"
+                                    HorizontalAlignment="Stretch"
                                     AutomationProperties.Name="{x:Bind Name}"
                                     LargeChange="0.2"
                                     Maximum="1"
-                                    HorizontalAlignment="Stretch"
                                     Minimum="0"
                                     SmallChange="0.1"
                                     Style="{StaticResource NumberBoxSettingStyle}"
@@ -428,8 +428,8 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <ComboBox Grid.Column="1"
-                              AutomationProperties.Name="{x:Bind Name}"
                               HorizontalAlignment="Stretch"
+                              AutomationProperties.Name="{x:Bind Name}"
                               ItemTemplate="{StaticResource EnumComboBoxTemplate}"
                               ItemsSource="{x:Bind EnumList, Mode=OneWay}"
                               SelectedItem="{x:Bind EnumValue, Mode=TwoWay}"
@@ -523,8 +523,8 @@
                                Text="{x:Bind Name}"
                                TextWrapping="WrapWholeWords" />
                     <CheckBox Grid.Column="1"
-                              HorizontalAlignment="Right"
                               Margin="0,0,-96,0"
+                              HorizontalAlignment="Right"
                               AutomationProperties.Name="{x:Bind Name}"
                               IsChecked="{x:Bind UnboxBoolOptional(Value), Mode=TwoWay, BindBack=BoolOptionalBindBack}"
                               IsThreeState="True" />
@@ -683,10 +683,10 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <TextBlock x:Uid="Actions_CommandDetails"
-                       Style="{StaticResource TextBlockGroupingStyle}"
                        Grid.Row="0"
                        Grid.Column="0"
-                       VerticalAlignment="Center" />
+                       VerticalAlignment="Center"
+                       Style="{StaticResource TextBlockGroupingStyle}" />
             <TextBlock x:Uid="Actions_Name"
                        Grid.Row="1"
                        Grid.Column="0"
@@ -709,10 +709,10 @@
                       ItemsSource="{x:Bind ViewModel.AvailableShortcutActions, Mode=OneWay}"
                       SelectedItem="{x:Bind ViewModel.ProposedShortcutActionName, Mode=TwoWay}" />
             <TextBlock x:Uid="Actions_Keybindings"
-                       Style="{StaticResource TextBlockGroupingStyle}"
                        Grid.Row="3"
                        Grid.Column="0"
-                       VerticalAlignment="Center" />
+                       VerticalAlignment="Center"
+                       Style="{StaticResource TextBlockGroupingStyle}" />
             <ListView x:Name="KeyChordListView"
                       x:Uid="Actions_KeyBindingsListView"
                       Grid.Row="4"
@@ -722,24 +722,24 @@
                       ItemsSource="{x:Bind ViewModel.KeyChordList, Mode=OneWay}"
                       SelectionMode="None">
                 <ListView.Header>
-                    <Button Click="{x:Bind ViewModel.AddKeybinding_Click}"
-                            Margin="0,0,0,4">
+                    <Button Margin="0,0,0,4"
+                            Click="{x:Bind ViewModel.AddKeybinding_Click}">
                         <TextBlock x:Uid="Actions_AddKeyChord" />
                     </Button>
                 </ListView.Header>
             </ListView>
             <TextBlock x:Uid="Actions_Arguments"
-                       Style="{StaticResource TextBlockGroupingStyle}"
                        Grid.Row="5"
                        Grid.Column="0"
                        VerticalAlignment="Center"
+                       Style="{StaticResource TextBlockGroupingStyle}"
                        Visibility="{x:Bind ViewModel.ActionArgsVM.HasArgs, Mode=OneWay}" />
             <ItemsControl Grid.Row="6"
                           Grid.Column="0"
                           Grid.ColumnSpan="2"
+                          HorizontalAlignment="Stretch"
                           AutomationProperties.Name="{x:Bind ViewModel.AdditionalArgumentsControlAutomationPropName}"
                           IsTabStop="False"
-                          HorizontalAlignment="Stretch"
                           ItemTemplateSelector="{StaticResource ArgsTemplateSelector}"
                           ItemsSource="{x:Bind ViewModel.ActionArgsVM.ArgValues, Mode=OneWay}" />
             <Button Grid.Row="7"
